--- a/tools/plop/templates/entity/entity.svelte.hbs
+++ b/tools/plop/templates/entity/entity.svelte.hbs
@@ -1,1 +1,1 @@
-<!-- Placeholder: {{properCase name}} entity component (presentational) -->
+<!-- Placeholder: {{pascal name}} entity component (presentational) -->
