--- a/tools/plop/templates/feature/index.ts.hbs
+++ b/tools/plop/templates/feature/index.ts.hbs
@@ -1,1 +1,3 @@
-// Public barrel for {{kebabCase name}} feature
+// Public barrel for
+{{kebab name}}
+feature export * from './entities' export * from './widgets'
