--- a/tools/plop/templates/feature/map.md.hbs
+++ b/tools/plop/templates/feature/map.md.hbs
@@ -1,4 +1,4 @@
-# Correlation map: {{kebabCase name}}
+# Correlation map:
+{{kebab name}}
 
-| UI file | Calls | Backend |
-| --- | --- | --- |
+| UI file | Calls | Backend | | --- | --- | --- |
