--- a/tools/plop/templates/model/store.ts.hbs
+++ b/tools/plop/templates/model/store.ts.hbs
@@ -1,1 +1,1 @@
-// Placeholder: Svelte store(s) for {{kebabCase feature}}/{{kebabCase name}}
+// Placeholder: Svelte store(s) for {{kebab feature}}/{{kebab name}}
